samples/_failures_safe/1761143955_ad662a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39cd6e71.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_39cd6e71.c:147:14: error: ‘STATE’ undeclared (first use in this function)
  147 |         case STATE
      |              ^~~~~
./samples/SAFE/__tmp_39cd6e71.c:147:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_39cd6e71.c:147:9: error: expected ‘:’ or ‘...’ at end of input
  147 |         case STATE
      |         ^~~~
./samples/SAFE/__tmp_39cd6e71.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39cd6e71.c:147:9: error: expected declaration or statement at end of input
